--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,28 +12,7 @@ on:
         #  - master
         #  - testing
   workflow_dispatch:
-    inputs:
-      arch:
-        type: choice
-        description: Architecture
-        options:
-        - both
-        - x86_64
-        - aarch64
 jobs:
-  pre-run:
-    if: ${{ github.event_name == 'workflow_dispatch' }}
-    runs-on: ubuntu-24.04
-    name: workflow_dispatch pre-run info
-    steps:
-      - name: workflow_dispatch pre-run info
-        run: |
-          echo "event name ${{ github.event_name }}"
-          echo "arch ${{ github.event.inputs.arch }}"
-          echo "logic aarch64: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'aarch64' ) ) }}"
-          echo "logic x86_64: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'x86_64' ) ) }}"
-
-
   a-publish-release:
     if: startsWith(github.ref, 'refs/tags/')
     #runs-on: self-hosted
@@ -53,53 +32,10 @@ jobs:
           name: ${{ github.ref }}
           tag: ${{ github.ref }}
 
-  # build arm64 dir on an arm64 runner, then upload it for use in the flatpak section
-  b-build-dir-arm64:
-    #runs-on: self-hosted
-    runs-on: ubuntu-24.04-arm
-    name: 'build dir arm64'
-    steps:
-      - name: Set env.BRANCH
-        run: echo "BRANCH=$(echo $GITHUB_REF | cut -d'/' -f 3)" >> $GITHUB_ENV
-      - name: install secrets
-        shell: bash
-        env:
-          GPG_KEY: ${{secrets.GPG_KEY}}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -qq -y gpg openssh-client
-          echo "$GPG_KEY" | gpg --import
-      - name: checkout code
-        uses: actions/checkout@v4
-      - name: build arm64 dir
-        shell: bash
-        env:
-          VERSION: "7.62.0"
-          build_aarch64: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'aarch64' ) ) }}
-        run: |
-          # arm64
-          set -x
-          if [[ "$build_aarch64" == "true" ]];then
-            sudo apt-get update && sudo apt-get install -qq -y bash rsync elfutils coreutils slirp4netns rootlesskit binfmt-support fuse-overlayfs qemu-user-static podman
-            echo "build aarch64"
-            echo "Version is: $VERSION"
-            bash ci-build.sh arm64
-            podman stop signal-desktop-$VERSION
-            podman rm signal-desktop-$VERSION
-            mv ~/Signal-Desktop_arm64 Signal-Desktop_arm64
-            tar czf builddir-arm64.tar.gz Signal-Desktop_arm64
-          fi
-      - name: Upload arm64 dir
-        if: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'aarch64' ) ) }}
-        uses: actions/upload-artifact@v4
-        with:
-          path: builddir-arm64.tar.gz
-          name: builddir-arm64
-
-  b-build-dir-amd64:
+  b-build-signal-arm64:
     #runs-on: self-hosted
     runs-on: ubuntu-24.04
-    name: 'build dir x86_64'
+    name: '2 build signal arm64'
     steps:
       - name: Set env.BRANCH
         run: echo "BRANCH=$(echo $GITHUB_REF | cut -d'/' -f 3)" >> $GITHUB_ENV
@@ -108,43 +44,70 @@ jobs:
         env:
           GPG_KEY: ${{secrets.GPG_KEY}}
         run: |
-          sudo apt-get update
-          sudo apt-get install -qq -y gpg openssh-client
+          sudo apt update
+          sudo apt install -qq -y gpg openssh-client
           echo "$GPG_KEY" | gpg --import
       - name: checkout code
         uses: actions/checkout@v4
-      - name: build x86_64 dir
+      - name: install deps
+        shell: bash
+        run: |
+          sudo apt update && sudo apt install -qq -y bash rsync podman flatpak elfutils coreutils slirp4netns rootlesskit binfmt-support fuse-overlayfs flatpak-builder qemu-user-static
+      - name: build deb
         shell: bash
         env:
-          VERSION: "7.62.0"
-          build_x86_64: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'x86_64' ) ) }}
+          VERSION: "7.31.0"
         run: |
-          # arm64
           set -x
-          if [[ "$build_x86_64" == "true" ]];then
-            sudo apt-get update && sudo apt-get install -qq -y bash rsync elfutils coreutils slirp4netns rootlesskit binfmt-support fuse-overlayfs qemu-user-static podman
-            echo "build x86_64"
-            echo "Version is: $VERSION"
-            bash ci-build.sh amd64
-            podman stop signal-desktop-$VERSION
-            podman rm signal-desktop-$VERSION
-            mv ~/Signal-Desktop_amd64 Signal-Desktop_amd64
-            tar czf builddir-amd64.tar.gz Signal-Desktop_amd64
-          fi
-      - name: Upload x86_64 dir
-        if: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'x86_64' ) ) }}
+          echo "Version is: $VERSION"
+          bash ci-build.sh arm64
+          podman stop signal-desktop-$VERSION
+          cp ~/signal-desktop.deb signal-desktop_arm64.deb
+          sha256sum signal-desktop_arm64.deb | tee checksums_arm64.txt
+      - name: Upload signal-desktop_arm64.deb
         uses: actions/upload-artifact@v4
         with:
-          path: builddir-amd64.tar.gz
-          name: builddir-amd64
+          path: signal-desktop_arm64.deb
+          name: signal-desktop_arm64.deb
 
-  b-build-flatpaks:
+
+  b-build-signal-amd64:
+    #runs-on: self-hosted
+    runs-on: ubuntu-24.04
+    name: '2 build signal amd64'
+    steps:
+      - name: Set env.BRANCH
+        run: echo "BRANCH=$(echo $GITHUB_REF | cut -d'/' -f 3)" >> $GITHUB_ENV
+      - name: checkout code
+        uses: actions/checkout@v4
+      - name: install deps
+        shell: bash
+        run: |
+          sudo apt update && sudo apt install -qq -y bash rsync podman flatpak elfutils coreutils slirp4netns rootlesskit binfmt-support fuse-overlayfs flatpak-builder qemu-user-static
+      - name: build deb
+        shell: bash
+        env:
+          VERSION: "7.31.0"
+        run: |
+          set -x
+          echo "Version is: $VERSION"
+          bash ci-build.sh amd64
+          podman stop signal-desktop-$VERSION
+          cp ~/signal-desktop.deb signal-desktop_amd64.deb
+          sha256sum signal-desktop_amd64.deb | tee checksums_amd64.txt
+      - name: Upload signal-desktop_amd64.deb
+        uses: actions/upload-artifact@v4
+        with:
+          path: signal-desktop_amd64.deb
+          name: signal-desktop_amd64.deb
+
+  c-build-flatpaks:
+    needs:
+      - b-build-signal-arm64
+      - b-build-signal-amd64
     #runs-on: self-hosted
     runs-on: ubuntu-24.04
     name: 'build flatpaks'
-    needs:
-      - b-build-dir-arm64
-      - b-build-dir-amd64
     steps:
       - name: Set env.BRANCH
         run: echo "BRANCH=$(echo $GITHUB_REF | cut -d'/' -f 3)" >> $GITHUB_ENV
@@ -158,41 +121,21 @@ jobs:
           echo "$GPG_KEY" | gpg --import
       - name: checkout code
         uses: actions/checkout@v4
-      - name: Download arm64 artifacts
-        if: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'aarch64' ) ) }}
+      - name: download release artifacts
         uses: actions/download-artifact@v4
         with:
-          path: /tmp/
-          name: builddir-arm64
-      - name: Download x86_64 artifacts
-        if: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'x86_64' ) ) }}
-        uses: actions/download-artifact@v4
-        with:
-          path: /tmp/
-          name: builddir-amd64
-      - name: install system package deps
+          path: debs
+      - name: move debs
         shell: bash
         run: |
-          sudo apt-get update && sudo apt-get install -qq -y bash rsync flatpak elfutils coreutils slirp4netns rootlesskit binfmt-support fuse-overlayfs flatpak-builder qemu-user-static unzip
-      - name: extract artifact downloads
+          # checking if debs are downloaded
+          ls -alh debs/
+          mv debs/*/*.deb .
+      - name: install deps
         shell: bash
-        env:
-          VERSION: "7.62.0"
-          build_x86_64: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'x86_64' ) ) }}
-          build_aarch64: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'aarch64' ) ) }}
         run: |
-          # amd64
-          set -x
-          if [[ "$build_x86_64" == "true" ]];then
-            tar xzf /tmp/builddir-amd64.tar.gz
-            ls -alh Signal-Desktop_amd64
-          fi
-          # arm64
-          set -x
-          if [[ "$build_aarch64" == "true" ]];then
-            tar xzf /tmp/builddir-arm64.tar.gz
-            ls -alh Signal-Desktop_arm64
-          fi
+          sha256sum signal-desktop*deb | tee -a checksums.txt
+          sudo apt-get update && sudo apt-get install -qq -y bash rsync flatpak elfutils coreutils binfmt-support fuse-overlayfs flatpak-builder qemu-user-static
       - name: install flatpak deps
         shell: bash
         env:
@@ -207,59 +150,103 @@ jobs:
           sudo flatpak install --noninteractive --arch=x86_64 flathub org.electronjs.Electron2.BaseApp//24.08 org.freedesktop.Platform//24.08 org.freedesktop.Sdk//24.08 -y
       - name: build flatpaks
         shell: bash
-        env:
-          build_x86_64: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'x86_64' ) ) }}
-          build_aarch64: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'aarch64' ) ) }}
         run: |
-          # amd64
-          if [[ "$build_x86_64" == "true" ]];then
-            flatpak-builder --arch=x86_64 --gpg-sign=FBEF43DC8C6BE9A7 --repo=/opt/pakrepo --force-clean .builddir flatpak.yml
-            flatpak build-bundle --arch=x86_64 /opt/pakrepo ./signal_amd64.flatpak org.signal.Signal master
-            sha256sum ./signal_amd64.flatpak | tee -a checksums.txt
-          fi
           # arm64
-          if [[ "$build_aarch64" == "true" ]];then
-            flatpak-builder --arch=aarch64 --gpg-sign=FBEF43DC8C6BE9A7 --repo=/opt/pakrepo --force-clean .builddir flatpak.yml
-            flatpak build-bundle --arch=aarch64 /opt/pakrepo ./signal_arm64.flatpak org.signal.Signal master
-            sha256sum ./signal_arm64.flatpak | tee -a checksums.txt
-          fi
+          flatpak-builder --arch=aarch64 --gpg-sign=FBEF43DC8C6BE9A7 --repo=/opt/pakrepo --force-clean .builddir flatpak.yml
+          flatpak build-bundle --arch=aarch64 /opt/pakrepo ./signal_arm64.flatpak org.signal.Signal master
+          sha256sum ./signal_arm64.flatpak | tee -a checksums.txt
+          # amd64
+          flatpak-builder --arch=x86_64 --gpg-sign=FBEF43DC8C6BE9A7 --repo=/opt/pakrepo --force-clean .builddir flatpak.yml
+          flatpak build-bundle --arch=x86_64 /opt/pakrepo ./signal_amd64.flatpak org.signal.Signal master
+          sha256sum ./signal_amd64.flatpak | tee -a checksums.txt
       - name: Upload checksums.txt
         uses: actions/upload-artifact@v4
         with:
           path: checksums.txt
           name: checksums.txt
-      - name: Upload amd64 flatpak
-        if: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'x86_64' ) ) }}
-        uses: actions/upload-artifact@v4
-        with:
-          path: signal_amd64.flatpak
-          name: signal_amd64.flatpak
       - name: Upload arm64 flatpak
-        if: ${{ github.event_name != 'workflow_dispatch' || ( github.event_name == 'workflow_dispatch' && ( github.event.inputs.arch == 'both' || github.event.inputs.arch == 'aarch64' ) ) }}
         uses: actions/upload-artifact@v4
         with:
           path: signal_arm64.flatpak
           name: signal_arm64.flatpak
+      - name: Upload amd64 flatpak
+        uses: actions/upload-artifact@v4
+        with:
+          path: signal_amd64.flatpak
+          name: signal_amd64.flatpak
 
-      # Publish
-      - name: Upload release artifacts
-        if: startsWith(github.ref, 'refs/tags/')
+  d-publish-flatpaks:
+    if: startsWith(github.ref, 'refs/tags/')
+    needs:
+      - a-publish-release
+      - c-build-flatpaks
+    #runs-on: self-hosted
+    runs-on: ubuntu-24.04
+    name: 'publish flatpaks'
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
+      - name: Set env.BRANCH
+        run: echo "BRANCH=$(echo $GITHUB_REF | cut -d'/' -f 3)" >> $GITHUB_ENV
+      - name: download release artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+      - name: install secrets
+        shell: bash
         env:
-          VERSION: "7.62.0"
+          GPG_KEY: ${{secrets.GPG_KEY}}
+        run: |
+          sudo apt-get update
+          sudo apt-get install -qq -y gpg openssh-client
+          echo "$GPG_KEY" | gpg --import
+      - name: move artifacts to current dir
+        shell: bash
+        run: |
+          # checking if debs and checksums are downloaded
+          ls -alh artifacts/
+          mv artifacts/*/* .
+          ls -alh *.deb
+          ls -alh *.flatpak
+          ls -alh checksums.txt
+      - name: Upload release artifacts
+        env:
+          VERSION: "7.31.0"
         uses: AButler/upload-release-assets@v3.0
         with:
           release-tag: ${{ env.VERSION }}
-          files: "signal_amd64.flatpak;signal_arm64.flatpak;checksums.txt"
+          files: "signal-desktop_arm64.deb;signal-desktop_amd64.deb;signal_amd64.flatpak;signal_arm64.flatpak;checksums.txt"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: install deps
+        shell: bash
+        run: |
+          sudo apt-get update && sudo apt-get install -qq -y bash rsync flatpak elfutils coreutils binfmt-support fuse-overlayfs flatpak-builder qemu-user-static
+      - name: install flatpak deps
+        shell: bash
+        env:
+          CI_USER: runner
+        run: |
+          sudo rm -rf /opt/pakrepo/
+          sudo mkdir -p /opt/pakrepo
+          sudo chown "$USER" /opt/pakrepo
+          sudo flatpak update --noninteractive -y
+          sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+          sudo flatpak install --noninteractive --arch=aarch64 flathub org.electronjs.Electron2.BaseApp//24.08 org.freedesktop.Platform//24.08 org.freedesktop.Sdk//24.08 -y
+          sudo flatpak install --noninteractive --arch=x86_64 flathub org.electronjs.Electron2.BaseApp//24.08 org.freedesktop.Platform//24.08 org.freedesktop.Sdk//24.08 -y
+      - name: build flatpaks
+        shell: bash
+        run: |
+          # arm64
+          flatpak-builder --arch=aarch64 --gpg-sign=FBEF43DC8C6BE9A7 --repo=/opt/pakrepo --force-clean .builddir flatpak.yml
+          # amd64
+          flatpak-builder --arch=x86_64 --gpg-sign=FBEF43DC8C6BE9A7 --repo=/opt/pakrepo --force-clean .builddir flatpak.yml
       - name: checkout gh-pages branch
-        if: startsWith(github.ref, 'refs/tags/')
         uses: actions/checkout@v4
         with:
-          ref: 3bfa32a90c7bdd769a0e2235f66bd1aec0310ec3
+          ref: 1a2b9404b5f768018b3bb2894f6b22da69c6f27c
       - name: sync to gh-pages branch repo dir and commit
-        if: startsWith(github.ref, 'refs/tags/')
         env:
-          VERSION: "7.62.0"
+          VERSION: "7.31.0"
         shell: bash
         run: |
           rsync -a --delete /opt/pakrepo/ ./repo/
