--- a/.github/workflows/version_check.yml
+++ b/.github/workflows/version_check.yml
@@ -1,4 +1,4 @@
-name: run autobuild.sh
+name: check for new version
 on:
   schedule:
     - cron: '0 0 * * *'
@@ -6,13 +6,13 @@ on:
 jobs:
   autobuild-sh:
     runs-on: ubuntu-latest
-    name: run autobuild.sh
+    name: 'check for release'
     steps:
       - name: checkout code
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.OTHER_TOKEN }}
-      - name: run autobuild.sh
+      - name: install deps
         shell: bash
         run: |
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
